agregamos un ejemplo del ejercicio 9 del tp 1

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <title>Conceptos de JS</title>
 </head>
 <body>
-    <script src="./js/02-condicionales.js"></script>
+    <script src="./js/ejercicios/tp1-ejercicio9.js"></script>
 </body>
 </html>
