--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <title>Conceptos de JS</title>
 </head>
 <body>
-    <script src="./js/ejercicios/tp1-ejercicio9.js"></script>
+    <script src="./js/03-bucles.js"></script>
 </body>
 </html>
