--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
     
-    <script src="./js/04-switch.js"></script>
+    <script src="./js/05-arrays.js"></script>
 </body>
 </html>
